# github-workflow-splunk-logger

./: Dockerfile  README.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: image-build.yml
src/: splunk_logger.py  splunk_manual_ingest.py
tests/: test_main.py
